force-app/main/default/objects/HR_Probe_Report_Tracking__c/HR_Probe_Report_Tracking__c.object-meta.xml
<CustomObject>
    <description>For tracking probation reports</description>
    <label>HR Prob Report Tracking</label>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>HR Probe Report Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HR Prob Report Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>