force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <description>Master-detail relationship to Appeal</description>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipName>HR_Probe_Report_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>