force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/Division_Liaison_Email__c.field-meta.xml
<CustomField>
    <fullName>Division_Liaison_Email__c</fullName>
    <description>For prob due dates notification, is updated with contact&#39;s Liaison Email field.</description>
    <label>Division Liaison Email</label>
    <type>Email</type>
</CustomField>