force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <description>To be updated with employee contact name using wfr for sending email to supervisor on new prob due date report.</description>
    <label>Employee Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>