force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/Past_Due_Only_Flag_2__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Only_Flag_2__c</fullName>
    <formula>IF( 
((X1st_PD_NR_Total__c = 0 &amp;&amp; X2nd_PD_NR_Total__c = 1 &amp;&amp; X3rd_PD_NR_Total__c = 1) 

|| 

(X1st_PD_NR_Total__c = 1 &amp;&amp; X2nd_PD_NR_Total__c = 0 &amp;&amp; X3rd_PD_NR_Total__c = 1) 

|| 

(X1st_PD_NR_Total__c = 1 &amp;&amp; X2nd_PD_NR_Total__c = 1 &amp;&amp; X3rd_PD_NR_Total__c = 0)

),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due Only Flag 2</label>
    <type>Checkbox</type>
</CustomField>