force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/Past_Due_Only_Flag__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Only_Flag__c</fullName>
    <formula>IF( 
((X1st_PD_NR_Total__c = 2 &amp;&amp;  X2nd_PD_NR_Total__c = 1 &amp;&amp;  X3rd_PD_NR_Total__c = 1)

||

(X1st_PD_NR_Total__c = 1 &amp;&amp;  X2nd_PD_NR_Total__c = 2 &amp;&amp;  X3rd_PD_NR_Total__c = 1)

||

(X1st_PD_NR_Total__c = 1 &amp;&amp;  X2nd_PD_NR_Total__c = 1 &amp;&amp;  X3rd_PD_NR_Total__c = 2)

||

(MOD( PD_NR_Column_Sum__c , 2)  &lt;&gt;  0)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due Only Flag</label>
    <type>Checkbox</type>
</CustomField>