force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/past_due_probe__c.field-meta.xml
<CustomField>
    <fullName>past_due_probe__c</fullName>
    <formula>(ISBLANK(X1st_Received_Date__c))&amp;&amp; (NOT(ISBLANK(X1st_Probe_due_date__c))) &amp;&amp; (X1st_Probe_due_date__c &lt;  TODAY())

||

(ISBLANK(X2nd_Received_Date__c))&amp;&amp; (NOT(ISBLANK(X2nd_Probe_Due_Date__c))) &amp;&amp; (X2nd_Probe_Due_Date__c &lt;  TODAY())

||

(ISBLANK(X3rd_Received_Date__c))&amp;&amp; (NOT(ISBLANK(X3rd_Probe_Due_Date__c))) &amp;&amp; (X3rd_Probe_Due_Date__c &lt;  TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>past due prob</label>
    <type>Checkbox</type>
</CustomField>