force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/PD_NR_Column_Sum__c.field-meta.xml
<CustomField>
    <fullName>PD_NR_Column_Sum__c</fullName>
    <formula>X1st_PD_NR_Total__c + X2nd_PD_NR_Total__c + X3rd_PD_NR_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PD NR Column Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>