force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/Position_Number__c.field-meta.xml
<CustomField>
    <fullName>Position_Number__c</fullName>
    <description>To be updated with position number using wfr for sending email to supervisor on new prob due date report.</description>
    <label>Position Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>