force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Email__c</fullName>
    <description>To be updated with employee&#39;s supervisor&#39;s email using wfr. Email sends out to supervisor when there&#39;s new probationary due date.</description>
    <label>Supervisor Email</label>
    <type>Email</type>
</CustomField>