force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/X1st_PD__c.field-meta.xml
<CustomField>
    <fullName>X1st_PD__c</fullName>
    <description>If past due PD = 1</description>
    <formula>IF (
(ISBLANK(X1st_Received_Date__c))&amp;&amp; (NOT(ISBLANK(X1st_Probe_due_date__c))) &amp;&amp; (X1st_Probe_due_date__c &lt; TODAY())

, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st PD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>