force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/X1st_PD_NR_Total__c.field-meta.xml
<CustomField>
    <fullName>X1st_PD_NR_Total__c</fullName>
    <formula>X1st_PD__c  +  X1st_NR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st PD NR Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>