force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/X1st_Probe_due_date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Probe_due_date__c</fullName>
    <description>1st Prob due date</description>
    <label>1st Prob Due Date</label>
    <type>Date</type>
</CustomField>