force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/X2nd_PD__c.field-meta.xml
<CustomField>
    <fullName>X2nd_PD__c</fullName>
    <formula>IF ((ISBLANK(X2nd_Received_Date__c))&amp;&amp; (NOT(ISBLANK(X2nd_Probe_Due_Date__c))) &amp;&amp; (X2nd_Probe_Due_Date__c &lt; TODAY()),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2nd PD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>