force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/X2nd_PD_NR_Total__c.field-meta.xml
<CustomField>
    <fullName>X2nd_PD_NR_Total__c</fullName>
    <formula>X2nd_PD__c + X2nd_NR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2nd PD NR Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>