force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/X2nd_Probe_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Probe_Due_Date__c</fullName>
    <description>2nd Prob Due Date</description>
    <label>2nd Prob Due Date</label>
    <type>Date</type>
</CustomField>