force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/X3rd_Due_Date_Older_than_One_Year__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Due_Date_Older_than_One_Year__c</fullName>
    <formula>( X3rd_Probe_Due_Date__c -  TODAY())  &gt; 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3rd Due Date Older than One Year</label>
    <type>Checkbox</type>
</CustomField>