force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/X3rd_NR__c.field-meta.xml
<CustomField>
    <fullName>X3rd_NR__c</fullName>
    <formula>IF (  X3rd_report_never_completed__c  = true, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3rd NR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>