force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/X3rd_PD_NR_Total__c.field-meta.xml
<CustomField>
    <fullName>X3rd_PD_NR_Total__c</fullName>
    <formula>X3rd_PD__c + X3rd_NR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3rd PD NR Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>