force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/X3rd_Probe_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Probe_Due_Date__c</fullName>
    <description>3rd Prob Due Date</description>
    <label>3rd Prob Due Date</label>
    <type>Date</type>
</CustomField>