force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/X3rd_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Received_Date__c</fullName>
    <description>3rd Received Date</description>
    <label>3rd Received Date</label>
    <type>Date</type>
</CustomField>