force-app/main/default/objects/HR_Probe_Report_Tracking__c/fields/X3rd_report_never_completed__c.field-meta.xml
<CustomField>
    <fullName>X3rd_report_never_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>3rd prob report never completed</description>
    <label>3rd report never completed</label>
    <type>Checkbox</type>
</CustomField>