force-app/main/default/objects/HR_Probe_Report_Tracking__c/validationRules/Invalid_Never_Completed_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Never_Completed_Status</fullName>
    <active>true</active>
    <description>Fire when &#39;report never completed&quot; is checked and Prob is not passed due yet.</description>
    <errorConditionFormula>( X1st_report_never_completed__c = TRUE &amp;&amp;  X1st_Probe_due_date__c  &gt;=  TODAY() ) 

||

( X2nd_report_never_completed__c = TRUE &amp;&amp;  X2nd_Probe_Due_Date__c  &gt;=  TODAY() ) 

||

( X3rd_report_never_completed__c = TRUE &amp;&amp;  X3rd_Probe_Due_Date__c  &gt;=  TODAY() )</errorConditionFormula>
    <errorMessage>&quot;report never completed&quot; field cannot be checked when corresponding due date is not passed</errorMessage>
</ValidationRule>