force-app/main/default/objects/HR_Probe_Report_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Appointment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>